HTML + SCSS : Add navigation and header section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Les Petits Plats</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body></body>
+  <body>
+    <nav class="navbar bg-transparent">
+      <div class="container-xxl">
+        <a class="navbar-brand" href="/">
+          <img
+            src="./img/logo/les-petits-plats.svg"
+            alt="Logo Les Petits Plats"
+          />
+        </a>
+      </div>
+    </nav>
+    <header class="d-flex justify-content-center">
+      <div class="container align-self-center">
+        <div class="row justify-content-center">
+          <div class="col col-md-9">
+            <h1>
+              Cherchez parmi plus de 1500 recettes<br class="d-none d-sm-block" />du quotidien, simples et
+              délicieuses
+            </h1>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col col-md-9">
+            <form class="d-flex">
+              <input
+                class="form-control"
+                type="search"
+                placeholder="Rechercher une recette, un ingrédient, ..."
+                aria-label="Search"
+              />
+              <button class="btn btn-dark" type="submit"><i class="fa-solid fa-magnifying-glass"></i></i></button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
