--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="row justify-content-center">
           <div class="col col-md-9">
             <h1>
-              Cherchez parmi plus de 1500 recettes<br class="d-none d-sm-block" />du quotidien, simples et
+              Cherchez parmi plus de 1500 recettes<br class="d-none d-lg-block" />du quotidien, simples et
               délicieuses
             </h1>
           </div>
@@ -49,5 +49,80 @@
         </div>
       </div>
     </header>
+    <main>
+        <section class="container">
+            <div class="row">
+                <div class="filters col-12 col-lg-9">
+                    <div class="tag btn-group" role="group" aria-label="Button group with nested dropdown">
+                        <div class="btn-group" role="group">
+                            <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                Ingrédients
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                <li>
+                                    <form class="d-flex">
+                                        <input
+                                            class="form-control"
+                                            type="search"
+                                            placeholder=""
+                                            aria-label="Search"
+                                        />
+                                        <button class="btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></i></button>
+                                        </form>
+                                </li>
+                                <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                                <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                            </ul>
+                          </div>
+                          <div class="btn-group" role="group">
+                            <button id="btnGroupDrop2" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                Appareils
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop2">
+                                <li>
+                                    <form class="d-flex">
+                                        <input
+                                            class="form-control"
+                                            type="search"
+                                            placeholder=""
+                                            aria-label="Search"
+                                        />
+                                        <button class="btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></i></button>
+                                        </form>
+                                </li>
+                                <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                                <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                            </ul>
+                          </div>
+                          <div class="btn-group" role="group">
+                            <button id="btnGroupDrop3" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                Ustensiles
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop3">
+                                <li>
+                                    <form class="d-flex">
+                                        <input
+                                            class="form-control"
+                                            type="search"
+                                            placeholder=""
+                                            aria-label="Search"
+                                        />
+                                        <button class="btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></i></button>
+                                        </form>
+                                </li>
+                                <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                                <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                            </ul>
+                          </div>
+                    </div>
+                </div>
+                <div class="number-of-recipes col-12 col-lg-3 align-self-center">
+                    <h4>1500 recettes</h4>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
   </body>
 </html>
