Add cards components

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar bg-transparent">
       <div class="container-xxl">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="./">
           <img
             src="./img/logo/les-petits-plats.svg"
             alt="Logo Les Petits Plats"
@@ -51,9 +51,9 @@
     </header>
     <main>
         <section class="container">
-            <div class="row">
-                <div class="filters col-12 col-lg-9">
-                    <div class="tag btn-group" role="group" aria-label="Button group with nested dropdown">
+            <div class="row mb-5">
+                <div class="filters d-flex d-lg-block justify-content-center col-12 col-lg-9">
+                    <div class="filters-content btn-group" role="group" aria-label="Button group with nested dropdown">
                         <div class="btn-group" role="group">
                             <button id="btnGroupDrop1" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                 Ingrédients
@@ -119,6 +119,126 @@
                 <div class="number-of-recipes col-12 col-lg-3 align-self-center">
                     <h4>1500 recettes</h4>
                 </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="cards row gx-5">
+                <div class="col-12 col-md-6 col-lg-4 mb-5">
+                    <a href="#">
+                        <article class="card">
+                            <span class="card-tag">10min</span>
+                            <img src="./img/recipes/Recette01.jpg" class="card-img-top" alt="Recette 01">
+                            <div class="card-body">
+                                <h2 class="card-title">Limonade de Coco</h2>
+                                <h3>Recette</h3>
+                                <p class="card-text">Mettre les glaçons à votre goût dans le blender, Ajouter le lait  la crème de coco, le jus de 2 citrons et le sucre ensemble. Mixer jusqu'à obtenir la consistance désirée.</p>
+                                <h3>Ingrédients</h3>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p>Lait de coco</p>
+                                        <span>400ml</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Jus de citron</p>
+                                        <span>2</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Créme de coco</p>
+                                        <span>4 cuillères</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Sucre</p>
+                                        <span>20g</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Glaçon</p>
+                                        <span>2</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-5">
+                    <a href="#">
+                        <article class="card">
+                            <span class="card-tag">60min</span>
+                            <img src="./img/recipes/Recette02.jpg" class="card-img-top" alt="Recette 02">
+                            <div class="card-body">
+                                <h2 class="card-title">Poisson Cru à la tahitienne</h2>
+                                <h3>Recette</h3>
+                                <p class="card-text">Découper le thon en dés, le mettre dans un plat et le recouvrir de jus de citron vert (mieux vaut prendre un plat large et peu profond). Laisser reposer au réfrigérateur au moins 2 heures.</p>
+                                <h3>Ingrédients</h3>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p>Thon Rouge (ou blanc)</p>
+                                        <span>200g</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Concombre</p>
+                                        <span>1</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Tomate</p>
+                                        <span>2</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Carotte</p>
+                                        <span>1</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Citron vert</p>
+                                        <span>5</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Lait de coco</p>
+                                        <span>100ml</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mb-5">
+                    <a href="#">
+                        <article class="card">
+                            <span class="card-tag">80min</span>
+                            <img src="./img/recipes/Recette03.jpg" class="card-img-top" alt="Recette 03">
+                            <div class="card-body">
+                                <h2 class="card-title">Poisson Cru à la tahitienne</h2>
+                                <h3>Recette</h3>
+                                <p class="card-text">Découper le poulet en morceaux, les faire dorer dans une cocotte avec de l'huile d'olive. Salez et poivrez. Une fois doré, laisser cuire en ajoutant de l'eau. Au bout de 30 minutes, ajouter le coulis de </p>
+                                <h3>Ingrédients</h3>
+                                <div class="row">
+                                    <div class="col-6">
+                                        <p>Poulet</p>
+                                        <span>1</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Lait de coco</p>
+                                        <span>400ml</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Coulis de tomate</p>
+                                        <span>25cl</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Oignon</p>
+                                        <span>1</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Poivron rouge</p>
+                                        <span>1</span>
+                                    </div>
+                                    <div class="col-6">
+                                        <p>Huile d'olive</p>
+                                        <span>1 cuillère à soupe</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
+                    </a>
+                </di>
             </div>
         </section>
     </main>
