Add clear btn and small scss adjustments

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 placeholder="Rechercher une recette, un ingrédient, ..."
                 aria-label="Search"
               />
-              <button class="btn btn-dark" type="submit"><i class="fa-solid fa-magnifying-glass"></i></i></button>
+              <button class="btn btn-clear"><i class="fa-solid fa-xmark"></i></button>
+              <button class="btn btn-search btn-dark" type="submit"><i class="fa-solid fa-magnifying-glass"></i></i></button>
             </form>
           </div>
         </div>
@@ -67,7 +68,8 @@
                                             placeholder=""
                                             aria-label="Search"
                                         />
-                                        <button class="btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></i></button>
+                                        <button class="btn btn-clear"><i class="fa-solid fa-xmark"></i></button>
+                                        <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i></i></button>
                                         </form>
                                 </li>
                                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
@@ -87,6 +89,7 @@
                                             placeholder=""
                                             aria-label="Search"
                                         />
+                                        <button class="btn btn-clear"><i class="fa-solid fa-xmark"></i></button>
                                         <button class="btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></i></button>
                                         </form>
                                 </li>
@@ -107,6 +110,7 @@
                                             placeholder=""
                                             aria-label="Search"
                                         />
+                                        <button class="btn btn-clear"><i class="fa-solid fa-xmark"></i></button>
                                         <button class="btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></i></button>
                                         </form>
                                 </li>
