--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                   alt="Recette 03"
                 />
                 <div class="card-body">
-                  <h2 class="card-title">Poisson Cru à la tahitienne</h2>
+                  <h2 class="card-title">Poulet coco réunionnais</h2>
                   <h3>Recette</h3>
                   <p class="card-text">
                     Découper le poulet en morceaux, les faire dorer dans une
