--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <main role="main">
       <section class="container">
-        <div class="row mb-5">
+        <div class="row">
           <div
             class="filters d-flex d-lg-block justify-content-center col-12 col-lg-9"
           >
@@ -193,7 +193,21 @@
         </div>
       </section>
       <div class="container">
-        <div class="cards row gx-5">
+        <div class="row mb-5">
+          <div class="tags col-12">
+            <ul class="list-group list-group-horizontal">
+              <li class="list-group-item">
+                <button type="button" class="btn">
+                  <span>Ingrédients</span>
+                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="cards row gx-5 mt-5">
           <div class="col-12 col-md-6 col-lg-4 mb-5">
             <a href="#">
               <article class="card">
