--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
     </header>
     <main role="main">
-      <section class="container">
+      <div class="container">
         <div class="row">
           <div
             class="filters d-flex d-lg-block justify-content-center col-12 col-lg-9"
@@ -191,7 +191,7 @@
             <p>1500 recettes</p>
           </div>
         </div>
-      </section>
+      </div>
       <div class="container">
         <div class="row mb-5">
           <div class="tags col-12">
