Add responsive layout for tags

--- a/index.html
+++ b/index.html
@@ -202,6 +202,36 @@
                   <span class="badge"><i class="fa-solid fa-xmark"></i></span>
                 </button>
               </li>
+              <li class="list-group-item">
+                <button type="button" class="btn">
+                  <span>Ingrédients</span>
+                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
+                </button>
+              </li>
+              <li class="list-group-item">
+                <button type="button" class="btn">
+                  <span>Ingrédients</span>
+                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
+                </button>
+              </li>
+              <li class="list-group-item">
+                <button type="button" class="btn">
+                  <span>Ingrédients</span>
+                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
+                </button>
+              </li>
+              <li class="list-group-item">
+                <button type="button" class="btn">
+                  <span>Ingrédients</span>
+                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
+                </button>
+              </li>
+              <li class="list-group-item">
+                <button type="button" class="btn">
+                  <span>Ingrédients</span>
+                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
+                </button>
+              </li>
             </ul>
           </div>
         </div>
