Create recipeTemplate and displayData functions + delete html cards

--- a/index.html
+++ b/index.html
@@ -237,150 +237,7 @@
         </div>
       </div>
       <div class="container">
-        <div class="cards row gx-5 mt-5">
-          <div class="col-12 col-md-6 col-lg-4 mb-5">
-            <a href="#">
-              <article class="card">
-                <span class="card-tag">10min</span>
-                <img
-                  src="./img/recipes/Recette01.jpg"
-                  class="card-img-top"
-                  alt="Recette 01"
-                />
-                <div class="card-body">
-                  <h2 class="card-title">Limonade de Coco</h2>
-                  <h3>Recette</h3>
-                  <p class="card-text">
-                    Mettre les glaçons à votre goût dans le blender, Ajouter le
-                    lait la crème de coco, le jus de 2 citrons et le sucre
-                    ensemble. Mixer jusqu'à obtenir la consistance désirée.
-                  </p>
-                  <h3>Ingrédients</h3>
-                  <div class="row">
-                    <div class="col-6">
-                      <p>Lait de coco</p>
-                      <span>400ml</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Jus de citron</p>
-                      <span>2</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Créme de coco</p>
-                      <span>4 cuillères</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Sucre</p>
-                      <span>20g</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Glaçon</p>
-                      <span>2</span>
-                    </div>
-                  </div>
-                </div>
-              </article>
-            </a>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4 mb-5">
-            <a href="#">
-              <article class="card">
-                <span class="card-tag">60min</span>
-                <img
-                  src="./img/recipes/Recette02.jpg"
-                  class="card-img-top"
-                  alt="Recette 02"
-                />
-                <div class="card-body">
-                  <h2 class="card-title">Poisson Cru à la tahitienne</h2>
-                  <h3>Recette</h3>
-                  <p class="card-text">
-                    Découper le thon en dés, le mettre dans un plat et le
-                    recouvrir de jus de citron vert (mieux vaut prendre un plat
-                    large et peu profond). Laisser reposer au réfrigérateur au
-                    moins 2 heures.
-                  </p>
-                  <h3>Ingrédients</h3>
-                  <div class="row">
-                    <div class="col-6">
-                      <p>Thon Rouge (ou blanc)</p>
-                      <span>200g</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Concombre</p>
-                      <span>1</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Tomate</p>
-                      <span>2</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Carotte</p>
-                      <span>1</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Citron vert</p>
-                      <span>5</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Lait de coco</p>
-                      <span>100ml</span>
-                    </div>
-                  </div>
-                </div>
-              </article>
-            </a>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4 mb-5">
-            <a href="#">
-              <article class="card">
-                <span class="card-tag">80min</span>
-                <img
-                  src="./img/recipes/Recette03.jpg"
-                  class="card-img-top"
-                  alt="Recette 03"
-                />
-                <div class="card-body">
-                  <h2 class="card-title">Poulet coco réunionnais</h2>
-                  <h3>Recette</h3>
-                  <p class="card-text">
-                    Découper le poulet en morceaux, les faire dorer dans une
-                    cocotte avec de l'huile d'olive. Salez et poivrez. Une fois
-                    doré, laisser cuire en ajoutant de l'eau. Au bout de 30
-                    minutes, ajouter le coulis de
-                  </p>
-                  <h3>Ingrédients</h3>
-                  <div class="row">
-                    <div class="col-6">
-                      <p>Poulet</p>
-                      <span>1</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Lait de coco</p>
-                      <span>400ml</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Coulis de tomate</p>
-                      <span>25cl</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Oignon</p>
-                      <span>1</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Poivron rouge</p>
-                      <span>1</span>
-                    </div>
-                    <div class="col-6">
-                      <p>Huile d'olive</p>
-                      <span>1 cuillère à soupe</span>
-                    </div>
-                  </div>
-                </div>
-              </article>
-            </a>
-          </div>
-        </div>
+        <div class="cards row gx-5 mt-5"></div>
       </div>
     </main>
     <script
@@ -393,5 +250,6 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="js/pages/index.js"></script>
   </body>
 </html>
