Add Filters template and Display filters data template functions

--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
                 >
                   Ingrédients
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                <ul
+                  id="ingredients"
+                  class="dropdown-menu"
+                  aria-labelledby="btnGroupDrop1"
+                >
                   <li>
                     <form class="d-flex">
                       <label class="visually-hidden" for="search-ingredient"
@@ -105,8 +109,6 @@
                       </button>
                     </form>
                   </li>
-                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 </ul>
               </div>
               <div class="btn-group" role="group">
@@ -119,7 +121,11 @@
                 >
                   Appareils
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="btnGroupDrop2">
+                <ul
+                  id="appliance"
+                  class="dropdown-menu"
+                  aria-labelledby="btnGroupDrop2"
+                >
                   <li>
                     <form class="d-flex">
                       <label class="visually-hidden" for="search-device"
@@ -142,8 +148,6 @@
                       </button>
                     </form>
                   </li>
-                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 </ul>
               </div>
               <div class="btn-group" role="group">
@@ -156,7 +160,11 @@
                 >
                   Ustensiles
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="btnGroupDrop3">
+                <ul
+                  id="ustensils"
+                  class="dropdown-menu"
+                  aria-labelledby="btnGroupDrop3"
+                >
                   <li>
                     <form class="d-flex">
                       <label
@@ -181,8 +189,6 @@
                       </button>
                     </form>
                   </li>
-                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-                  <li><a class="dropdown-item" href="#">Dropdown link</a></li>
                 </ul>
               </div>
             </div>
