Refactoring dropdown button filters in order to make search bar sticky

--- a/index.html
+++ b/index.html
@@ -82,34 +82,34 @@
                 >
                   Ingrédients
                 </button>
-                <ul
-                  id="ingredients"
-                  class="dropdown-menu"
-                  aria-labelledby="btnGroupDrop1"
-                >
-                  <li>
-                    <form class="d-flex">
-                      <label class="visually-hidden" for="search-ingredient"
-                        >Rechercher un ingrédient</label
-                      >
-                      <input
-                        id="search-ingredient"
-                        class="form-control"
-                        type="search"
-                        placeholder=""
-                        aria-label="Search"
-                      />
-                      <button class="btn btn-clear">
-                        <span class="visually-hidden">Clear</span>
-                        <i class="fa-solid fa-xmark"></i>
-                      </button>
-                      <button class="btn btn-search" type="submit">
-                        <span class="visually-hidden">Submit</span>
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                      </button>
-                    </form>
-                  </li>
-                </ul>
+                <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                  <form class="d-flex">
+                    <label class="visually-hidden" for="search-ingredient"
+                      >Rechercher un ingrédient</label
+                    >
+                    <input
+                      id="search-ingredient"
+                      class="form-control"
+                      type="search"
+                      placeholder=""
+                      aria-label="Search"
+                    />
+                    <button class="btn btn-clear">
+                      <span class="visually-hidden">Clear</span>
+                      <i class="fa-solid fa-xmark"></i>
+                    </button>
+                    <button class="btn btn-search" type="submit">
+                      <span class="visually-hidden">Submit</span>
+                      <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                  </form>
+                  <div class="dropdown-menu__container">
+                    <ul
+                      id="ingredients"
+                      class="list-group list-group-vertical"
+                    ></ul>
+                  </div>
+                </div>
               </div>
               <div class="btn-group" role="group">
                 <button
@@ -121,34 +121,34 @@
                 >
                   Appareils
                 </button>
-                <ul
-                  id="appliance"
-                  class="dropdown-menu"
-                  aria-labelledby="btnGroupDrop2"
-                >
-                  <li>
-                    <form class="d-flex">
-                      <label class="visually-hidden" for="search-device"
-                        >Rechercher un appareil</label
-                      >
-                      <input
-                        id="search-device"
-                        class="form-control"
-                        type="search"
-                        placeholder=""
-                        aria-label="Search"
-                      />
-                      <button class="btn btn-clear">
-                        <span class="visually-hidden">Clear</span>
-                        <i class="fa-solid fa-xmark"></i>
-                      </button>
-                      <button class="btn" type="submit">
-                        <span class="visually-hidden">Submit</span>
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                      </button>
-                    </form>
-                  </li>
-                </ul>
+                <div class="dropdown-menu" aria-labelledby="btnGroupDrop2">
+                  <form class="d-flex">
+                    <label class="visually-hidden" for="search-ingredient"
+                      >Rechercher un ingrédient</label
+                    >
+                    <input
+                      id="search-appliance"
+                      class="form-control"
+                      type="search"
+                      placeholder=""
+                      aria-label="Search"
+                    />
+                    <button class="btn btn-clear">
+                      <span class="visually-hidden">Clear</span>
+                      <i class="fa-solid fa-xmark"></i>
+                    </button>
+                    <button class="btn btn-search" type="submit">
+                      <span class="visually-hidden">Submit</span>
+                      <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                  </form>
+                  <div class="dropdown-menu__container">
+                    <ul
+                      id="appliance"
+                      class="list-group list-group-vertical"
+                    ></ul>
+                  </div>
+                </div>
               </div>
               <div class="btn-group" role="group">
                 <button
@@ -160,36 +160,34 @@
                 >
                   Ustensiles
                 </button>
-                <ul
-                  id="ustensils"
-                  class="dropdown-menu"
-                  aria-labelledby="btnGroupDrop3"
-                >
-                  <li>
-                    <form class="d-flex">
-                      <label
-                        class="visually-hidden"
-                        for="search-kitchen-utensil"
-                        >Rechercher un ustencils</label
-                      >
-                      <input
-                        id="search-kitchen-utensil"
-                        class="form-control"
-                        type="search"
-                        placeholder=""
-                        aria-label="Search"
-                      />
-                      <button class="btn btn-clear">
-                        <span class="visually-hidden">Clear</span>
-                        <i class="fa-solid fa-xmark"></i>
-                      </button>
-                      <button class="btn" type="submit">
-                        <span class="visually-hidden">Submit</span>
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                      </button>
-                    </form>
-                  </li>
-                </ul>
+                <div class="dropdown-menu" aria-labelledby="btnGroupDrop3">
+                  <form class="d-flex">
+                    <label class="visually-hidden" for="search-ingredient"
+                      >Rechercher un ingrédient</label
+                    >
+                    <input
+                      id="search-ustensils"
+                      class="form-control"
+                      type="search"
+                      placeholder=""
+                      aria-label="Search"
+                    />
+                    <button class="btn btn-clear">
+                      <span class="visually-hidden">Clear</span>
+                      <i class="fa-solid fa-xmark"></i>
+                    </button>
+                    <button class="btn btn-search" type="submit">
+                      <span class="visually-hidden">Submit</span>
+                      <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+                  </form>
+                  <div class="dropdown-menu__container">
+                    <ul
+                      id="ustensils"
+                      class="list-group list-group-vertical"
+                    ></ul>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
