--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="row justify-content-center">
           <div class="col col-md-9">
             <h1>
-              Cherchez parmi plus de 1500 recettes<br
-                class="d-none d-lg-block"
-              />du quotidien, simples et délicieuses
+              Cherchez parmi plus de 1500 recettes
+              <br class="d-none d-lg-block" />du quotidien, simples et
+              délicieuses
             </h1>
           </div>
         </div>
