Add tags function

--- a/index.html
+++ b/index.html
@@ -199,44 +199,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="tags col-12">
-            <ul class="list-group list-group-horizontal">
-              <li class="list-group-item">
-                <button type="button" class="btn">
-                  <span>Ingrédients</span>
-                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
-                </button>
-              </li>
-              <li class="list-group-item">
-                <button type="button" class="btn">
-                  <span>Ingrédients</span>
-                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
-                </button>
-              </li>
-              <li class="list-group-item">
-                <button type="button" class="btn">
-                  <span>Ingrédients</span>
-                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
-                </button>
-              </li>
-              <li class="list-group-item">
-                <button type="button" class="btn">
-                  <span>Ingrédients</span>
-                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
-                </button>
-              </li>
-              <li class="list-group-item">
-                <button type="button" class="btn">
-                  <span>Ingrédients</span>
-                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
-                </button>
-              </li>
-              <li class="list-group-item">
-                <button type="button" class="btn">
-                  <span>Ingrédients</span>
-                  <span class="badge"><i class="fa-solid fa-xmark"></i></span>
-                </button>
-              </li>
-            </ul>
+            <ul class="list-group list-group-horizontal"></ul>
           </div>
         </div>
       </div>
