Add dropdown filters by input search

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                 </button>
                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop2">
                   <form class="d-flex">
-                    <label class="visually-hidden" for="search-ingredient"
-                      >Rechercher un ingrédient</label
+                    <label class="visually-hidden" for="search-appliance"
+                      >Rechercher un appareils</label
                     >
                     <input
                       id="search-appliance"
@@ -158,12 +158,12 @@
                   data-bs-toggle="dropdown"
                   aria-expanded="false"
                 >
-                  Ustensiles
+                  Ustensils
                 </button>
                 <div class="dropdown-menu" aria-labelledby="btnGroupDrop3">
                   <form class="d-flex">
-                    <label class="visually-hidden" for="search-ingredient"
-                      >Rechercher un ingrédient</label
+                    <label class="visually-hidden" for="search-ustensils"
+                      >Rechercher un ustensils</label
                     >
                     <input
                       id="search-ustensils"
